@@ -54,6 +54,7 @@ v16.0.00
 		Finance: added logging for failed bulk email sends
         Finance: add a Mark as Paid bulk action in Manage Invoices
         Finance: add Credit Card payment type to gibbonPayment table
+		Finance: added ability to issue reminders (individually and in bulk) for invocies with status Paid - Partial
 		Form Group: added link to print listing of students in form group detail view
 		Library: simplified interface for Duplicate in Manage Catalog
 		Markbook: fixed multi-byte string length issue causing automatic comment expansion in Markbook view
